--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   app:
-    image: moisesgc/webacademy:latest
+    image: herculesfj/webacademy:latest
     container_name: webacademydemo
     restart: always
     ports:
