--- a/.github/workflows/wa-google-cloudrun-docker.yml
+++ b/.github/workflows/wa-google-cloudrun-docker.yml
@@ -25,10 +25,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+          logout: true
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
