--- a/.github/workflows/wa-google-cloudrun-docker.yml
+++ b/.github/workflows/wa-google-cloudrun-docker.yml
@@ -23,20 +23,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: |
+            image=moby/buildkit:latest
+            network=host
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
+          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          logout: true
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          file: ./Dockerfile   # Specify the path to your Dockerfile here
+          file: ./Dockerfile
           tags: herculesfj/webacademy:latest
+          cache-from: type=registry,ref=herculesfj/webacademy:buildcache
+          cache-to: type=registry,ref=herculesfj/webacademy:buildcache,mode=max
   deploy:
     needs: lint
     name: Setup Gcloud Account
